--- a/public/Table-Test.html
+++ b/public/Table-Test.html
@@ -1,11 +1,12 @@
 <html>
     <head></head>
-    <body><html><h1> </h1>
-        <table style="border-width: 0px; width: 540px;" border="0">
+    <body>
+        <div style="background-image: url(Goose.png);"><html><h1> </h1>
+        <table style="border-width: 3px; border-color: #474747; background: rgba(255, 255, 255, 0.377);width: 540px;" border="0">
         <tbody>
         <tr>
         <td> 
-        <h1><span style="color: #808080;">Apple</span> made the all-new <a title="Iphone" href="https://www.apple.com/iphone-13-pro/">iPhone 13 Pro!</a> <span style="font-size: xx-small;">(link)</span></h1>
+        <h1><span style="color: #808080;">Apple</span> made the all-new <a title="Iphone" href="Apple.jpg">iPhone 13 Pro!</a> <span style="font-size: xx-small;">(link)</span></h1>
         <h3>Now all the other phones are <span style="color: #808080;">obsolete</span></h3>
         <hr /><hr />
         <p><img src="https://00x000.s3.amazonaws.com/Apple.jpg" alt="" width="385" height="771" /></p>
@@ -34,5 +35,5 @@
         <div id="wayback1996-sequence"> </div>
         <div id="wayback1996-chart"> </div>
         <div id="wayback1996-message"> </div>
-        </div></html></body>
+        </div></html></div></body>
 </html>
