--- a/public/table-test.html
+++ b/public/table-test.html
@@ -43,7 +43,7 @@
 
 
 <html>
-    <head></head>
+    <headmeta charset="UTF-8"></head>
     <body>
         <div style="background-image: url(Goose.png);"><html><h1> </h1>
         <table style="border-width: 3px; border-color: #474747; background: rgba(255, 255, 255, 0.377);width: 540px;" border="0">
